[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/additional_ui/refuse_frame.png" type="Texture" id=1]
[ext_resource path="res://assets/additional_ui/refuse_frame_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/additional_ui/accept_frame_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/additional_ui/accept_frame.png" type="Texture" id=5]
[ext_resource path="res://scripts/UI/DecisionButtons.gd" type="Script" id=6]



[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[node name="DecisionButtons" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefuseFrame" type="ColorRect" parent="."]
margin_left = 6.0
margin_top = 251.0
margin_right = 224.0
margin_bottom = 297.0
color = Color( 0.32549, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefuseButton" type="TextureButton" parent="RefuseFrame"]
margin_left = 3.0
margin_top = 3.0
margin_right = 215.0
margin_bottom = 43.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefuseLabel" type="Label" parent="RefuseFrame"]
margin_right = 218.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Refuse text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptFrame" type="ColorRect" parent="."]
margin_left = 245.747
margin_top = 250.667
margin_right = 463.747
margin_bottom = 296.667
color = Color( 0.32549, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButton" type="TextureButton" parent="AcceptFrame"]
margin_left = 3.0
margin_top = 3.0
margin_right = 215.0
margin_bottom = 43.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptLabel" type="Label" parent="AcceptFrame"]
margin_right = 218.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Accept text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
